--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 (next release) on (date of next release)
      0.50        March 27, 2000
+18.04.00 VZ: dynamic plug-in (modules) loading works under Windows
 24.03.00 VZ: startup tips
              creating MH folders from subfolders dialogs works
 23.03.00 KB: Finished folder creation wizard. Fixed inheritance of FolderView column sizes.
