--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 (next release) on (date of next release)
-     0.50        March 27, 2000
+23.04.00 VZ: added "Quick move" submenu to folder popup menu
 18.04.00 VZ: dynamic plug-in (modules) loading works under Windows
+     0.50        March 27, 2000
 24.03.00 VZ: startup tips
              creating MH folders from subfolders dialogs works
 23.03.00 KB: Finished folder creation wizard. Fixed inheritance of FolderView column sizes.
