--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 (next release) on (date of next release)
+01.05.00 VZ: initial wizard small fixes: don't create servers not specified
+             possibility to remember the password entered interactively
+             it is possible to _not_ use Outbox now
+             the config file is, finally, created with the correct permissions
 29.04.00 KB: MailFolder API cleanup, server config setting fixes,
              wxLayout fixes
 26.04.00 VZ: drag and drop works with other folder views (frames) too
